--- a/themes/menca/layouts/partials/head.html
+++ b/themes/menca/layouts/partials/head.html
@@ -23,6 +23,8 @@
   {{ if .IsHome}}<meta property="og:image" content="{{ .Site.Params.hero.hero__image | absURL }}">{{ else }}<meta property="og:image" content="{{ .Params.Image | absURL }}">{{ end }}
 
   <!-- Fonts -->
+  <link rel="stylesheet" href="https://use.typekit.net/ygg3dgn.css">
+  
   <link rel="preconnect" href="https://fonts.gstatic.com">
   
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700;900&display=swap" as="style">
