replaced ionicons with font awesome

--- a/themes/menca/layouts/partials/header.html
+++ b/themes/menca/layouts/partials/header.html
@@ -17,7 +17,7 @@
         <nav class="main-nav">
           <div class="main-nav__box">
             <div class="nav__icon-close">
-              <i class="ion ion-md-close"></i>
+              <i class="fa-regular fa-xmark"></i>
             </div>
             <div class="nav__title">Menu</div>
             <ul class="nav__list list-reset">
@@ -28,8 +28,8 @@
               {{ end }}
               <li class="nav__item nav__item-icon">
                 <div class="toggle-theme">
-                  <div class="toggle-moon" title="Enable dark mode"><i class="ion ion-ios-moon"></i></div>
-                  <div class="toggle-sun" title="Enable light mode"><i class="ion ion-ios-sunny"></i></div>
+                  <div class="toggle-moon" title="Enable dark mode"><i class="fa-regular fa-moon"></i></div>
+                  <div class="toggle-sun" title="Enable light mode"><i class="fa-regular fa-sun-bright"></i></div>
                 </div>
               </li>
             </ul>
