--- a/themes/menca/layouts/partials/head.html
+++ b/themes/menca/layouts/partials/head.html
@@ -24,17 +24,9 @@
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://use.typekit.net/ygg3dgn.css">
-  
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700;900&display=swap" as="style">
-  
-  <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;700;900&display=swap" rel="stylesheet">
 
-  <!-- Ionicons -->
-  <link rel="preload" href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" as="style">
-
-  <link href="https://unpkg.com/ionicons@4.2.2/dist/css/ionicons.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/803d99949b.js" crossorigin="anonymous"></script>
 
   <script>
     if (localStorage.getItem("theme") === "dark") {
