--- a/themes/menca/assets/sass/0-settings/_variables.scss
+++ b/themes/menca/assets/sass/0-settings/_variables.scss
@@ -19,12 +19,13 @@ $base-font-size: 20px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Proxima Nova', Helvetica Neue, Helvetica, Arial, sans-serif;
+$base-font-family: proxima-nova, sans-serif;
 $base-line-height: 1.5;
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'Proxima Nova', Helvetica Neue, Helvetica, Arial, sans-serif;
+$heading-font-family: proxima-nova, sans-serif;
+
 
 $font-size-h1:  36px;
 $font-size-h2:  28px;
