turning site into blog

--- a/themes/menca/layouts/partials/header.html
+++ b/themes/menca/layouts/partials/header.html
@@ -26,15 +26,11 @@
                 <a href="{{ .URL }}" class="nav__link">{{ .Name }}</a>
               </li>
               {{ end }}
-              <li class="nav__item nav__item-icon">
-                <div class="toggle-theme">
-                  <div class="toggle-moon" title="Enable dark mode"><i class="fa-regular fa-moon"></i></div>
-                  <div class="toggle-sun" title="Enable light mode"><i class="fa-regular fa-sun-bright"></i></div>
-                </div>
-              </li>
             </ul>
           </div>
         </nav>
+
+        <div id="search"></div>
 
         <div class="nav-button">
           <i class="nav__icon icon__menu ion ion-md-menu"></i>
