--- a/themes/menca/assets/sass/3-modules/_hero.scss
+++ b/themes/menca/assets/sass/3-modules/_hero.scss
@@ -12,7 +12,9 @@
 
 .hero__inner {
   display: flex;
+  flex-direction: column;
   align-items: center;
+  gap: 1rem;
 
   @media only screen and (max-width: $desktop) {
     flex-direction: column;
