--- a/themes/menca/layouts/partials/footer.html
+++ b/themes/menca/layouts/partials/footer.html
@@ -4,37 +4,20 @@
   <div class="footer__inner">
     <div class="container">
       <div class="row">
-
-        <div class="col col-5 col-d-12">
-          <div class="footer__author">
-            <div class="footer__author-avatar">
-              <img class="lazy" data-src="{{ .Site.Params.author.author__avatar }}" alt="{{ .Site.Params.author.author__name }}">
-            </div>
-            <h3 class="footer__author-name">{{ .Site.Params.author.author__name }}</h3>
-            <p class="footer__author-bio">{{ .Site.Params.author.author__bio }}</p>
-            {{ partial "social-links.html" . }}
-          </div>
-        </div>
-
-        {{ if .Site.Params.gallery }}
-        <div class="col col-6 push-1 col-d-12 push-d-0">
-          <div class="footer__gallery">
-            <h3 class="footer__gallery-title">{{ .Site.Params.gallery.gallery__title }}</h3>
-            <div class="gallery-footer">
-              <div class="gallery" style="grid-template-columns: repeat({{ .Site.Params.gallery.gallery__columns }}, auto);">
-              {{ with .Site.Params.gallery_image }}
-                {{ range . }}
-                <div class="gallery__image">
-                  <img src="{{ .image_url }}" alt="{{ .image_alt }}" loading="lazy">
-                </div>
-                {{ end }}
-              </div>
-            </div>
-            {{ end }}
-          </div>
-        </div>
-        {{ end }}
-
+        <form
+        action="https://buttondown.email/api/emails/embed-subscribe/carpedavid"
+        method="post"
+        target="popupwindow"
+        onsubmit="window.open('https://buttondown.email/carpedavid', 'popupwindow')"
+        class="embeddable-buttondown-form"
+        >
+        <input type="text" name="metadata__first_name" id="first_name" placeholder="First Name"/>
+        <input type="email" name="email" id="bd-email" placeholder="Email"/>
+        <input type="submit" value="Subscribe" />
+        <p>
+          <a href="https://buttondown.email/refer/carpedavid" target="_blank">Powered by Buttondown.</a>
+        </p>
+      </form>
       </div>
     </div>
   </div>
@@ -44,7 +27,7 @@
       <div class="row">
         <div class="col col-12">
           <div class="footer__info-box">
-            <div class="copyright">Copyright &copy; {{ dateFormat "2006" now }} {{ .Site.Params.author.author__name }}.</div>
+            <div class="copyright">Copyright &copy; {{ dateFormat "2006" now }} Amalara Game Studio.</div>
             <div class="top" title="Top"><i class="fa-regular fa-arrow-up"></i></div>
           </div>
         </div>
